--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>{{ _('home_header') }}</h1>
+
+    {% if username %}
+        <p>{{ _('logged_in_as', username=username) }}</p>
+    {% else %}
+        <p>{{ _('not_logged_in') }}</p>
+    {% endif %}
 </body>
 </html>
